2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.95.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* test-suite/Makefile.am: Add makefile foo for the wrapset api
	check.

	* test-suite/wrapset.scm: New check for api stability in the
	g-wrap-generated glib wrapset.

	* test-suite/wrapset.api: New file, defines the glib API.

	* gnome/gw/support/gtk-doc.scm (extract-defs)
	(check-documentation-coverage): New export,
	check-documentation-coverage, which looks at a texinfo file and a
	set of modules to determine which exports of the modules are
	undocumented.
	(check-documentation-coverage): Sort the undocumented symbol list.
	(check-documentation-coverage): Don't error out if a module cannot
	be resolved.

2007-11-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm (gobject-class-stexi-docs): Put
	prop descriptions in a para.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.94.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-24  Andy Wingo  <wingo@pobox.com>

	* test-suite/Makefile.am: Update for gobject docs moving.

	* doc/gobject/docs.mk: Update a bit.

	* test-suite/gobject.api: Regenerate for gtk-doc.scm changes, an
	incompatible change but not in any released version.

	* gnome/gw/support/gtk-doc.scm: Document the module, and reduce
	the number of exports to just two. Move around some definitions.
	(gtk-doc->texi-defuns): Rework to handle either the heuristics
	mode or g-wrap, and document.
	(gtk-doc->texi-stubs): Document.

	* doc/gobject/make-texinfo.scm: Add spaces between args to deal
	with fixed guile-lib serialization.

	* doc/glib/: 
	* doc/gobject/: GLib and GObject docs moved to separate
	directories.

2007-09-07  Andy Wingo  <wingo@pobox.com>
